Bug 453301 - Global Menu broken by 2e056ed6e563f5f0fd7975186db8238adb20b6cf in plasma-workspace
Summary: Global Menu broken by 2e056ed6e563f5f0fd7975186db8238adb20b6cf in plasma-work...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Global Menu widget (other bugs)
Version First Reported In: master
Platform: Other Linux
: VHI normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
: 453182 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-05-02 14:38 UTC by Nate Graham
Modified: 2022-05-10 17:27 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2022-05-02 14:38:16 UTC
With https://invent.kde.org/plasma/plasma-workspace/-/commit/2e056ed6e563f5f0fd7975186db8238adb20b6cf, the global menu no longer works in Dolphin, Konsole, and all other apps I try. Clicking on text in the bar doesn't open a menu. Reverting the commit fixes it.
Comment 1 Nate Graham 2022-05-02 20:10:06 UTC
Will be fixed with https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/1701
Comment 2 Nate Graham 2022-05-03 14:24:37 UTC
*** Bug 453182 has been marked as a duplicate of this bug. ***
Comment 3 Nate Graham 2022-05-10 17:27:44 UTC
Git commit 6790b66cf304f339b32f215b5f7db7f596dd0466 by Nate Graham, on behalf of Kai Uwe Broulik.
Committed on 10/05/2022 at 17:18.
Pushed by ngraham into branch 'master'.

[Global Menu] Fix breakage caused by variant type change

`void *` casts into anything but `QVariant::value()` (most of the time)
does a metatype check which needs to match.

Also, we need to unwrap the `QPointer`.

M  +3    -9    applets/appmenu/lib/appmenuapplet.cpp
M  +1    -1    applets/appmenu/plugin/appmenumodel.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/6790b66cf304f339b32f215b5f7db7f596dd0466