[Global Menu] Fix breakage caused by variant type change

`void *` casts into anything but `QVariant::value()` (most of the time)
does a metatype check which needs to match.

Also, we need to unwrap the `QPointer`.

BUG: 453301